Bug 209248 - Kopete crashes when connection to Jabber-Yahoo [assert, UI::ContactListTreeModel::indexListFor, UI::ContactListTreeModel::handleContactDataChange, UI::ContactListModel::newMessageEvent]
Summary: Kopete crashes when connection to Jabber-Yahoo [assert, UI::ContactListTreeMo...
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Contact list (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 202976 210275 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-10-02 22:13 UTC by Richard Homonnai
Modified: 2009-10-30 01:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Homonnai 2009-10-02 22:13:21 UTC
Version:            (using KDE 4.3.1)
Compiler:          gcc-4.3.2 
OS:                Linux
Installed from:    Gentoo Packages

Whenever I connect to Yahoo through Jabber, I get an instant crash now after updating my transport.

I can't provide a usable stacktrace atm, because I am at a stripped system, but I was able to get the following output in stdout/stderr:

Object::connect: No such signal JabberChatSession::typing(bool) in /tmp/portage/kde-base/kopete-4.3.1/work/kopete-4.3.1/kopete/kopete/chatwindow/kopeteemailwindow.cpp:147
Object::connect: No such slot ChatTextEditPart::setFont() in /tmp/portage/kde-base/kopete-4.3.1/work/kopete-4.3.1/kopete/kopete/chatwindow/kopeteemailwindow.cpp:234
Object::connect:  (sender name:   'format_font')
Object::connect: No such slot ChatTextEditPart::setForegroundColorColor() in /tmp/portage/kde-base/kopete-4.3.1/work/kopete-4.3.1/kopete/kopete/chatwindow/kopeteemailwindow.cpp:238
Object::connect:  (sender name:   'format_color')
Object::connect: No such slot ChatTextEditPart::setBackgroundColorColor() in /tmp/portage/kde-base/kopete-4.3.1/work/kopete-4.3.1/kopete/kopete/chatwindow/kopeteemailwindow.cpp:242
Object::connect:  (sender name:   'format_bgcolor')
ASSERT: "mcmi" in file /tmp/portage/kde-base/kopete-4.3.1/work/kopete-4.3.1/kopete/kopete/contactlist/contactlisttreemodel.cpp, line 551
KCrash: Application 'kopete' crashing...
sock_file=/home/chain/.kde4/socket-richBOOK/kdeinit4__0

Will try to attach the trace ASAP.

Might it be related to https://bugs.kde.org/show_bug.cgi?id=188654 ?
Comment 1 Dario Andres 2009-10-03 19:09:27 UTC
It may be difficult to know without a proper backtrace...
Comment 2 Dario Andres 2009-10-03 19:11:57 UTC
If you can reproduce the crash at will, may you read http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports and post a complete backtrace here? Do not forget to disable the "strip" funtion in the Gentoo scripts. Thanks
Comment 3 Richard Homonnai 2009-10-04 05:36:11 UTC
I have enabled -ggdb, disabled -fomit-frame-pointer, and set FEATURES="splitdebug"

I remerged kdelibs, kdepimlibs and kopete, but it still says the stacktrace is unusable. What else do I need to have not stripped?
Comment 4 Dario Andres 2009-10-04 15:54:51 UTC
According to http://www.gentoo.org/proj/en/qa/backtraces.xml you need to use the "nostrip" feature. Regards
Comment 5 Richard Homonnai 2009-10-08 04:46:23 UTC
I have recompiled kdelibs, kdepimlibs, kopete with

CFLAGS="-march=prescott -O2 -pipe -ggdb"
CXXFLAGS="${CFLAGS}"
FEATURES="candy -distcc nodoc noinfo parallel-fetch nostrip"

It gives me perfectly untouched binaries:

chain@richBOOK ~ $ file /usr/bin/kopete
/usr/bin/kopete: ELF 32-bit LSB executable, Intel 80386, version 1 (SYSV), dynamically linked (uses shared libs), for GNU/Linux 2.6.9, not stripped

BUT: drkonqi still says that's no useful stacktrace :(
Do I need to recompile more (like, Qt4)?

Greetings
Comment 6 Richard Homonnai 2009-10-08 05:16:09 UTC
This is all I could get right now:

Application: Kopete (kopete), signal: Aborted
[Current thread is 0 (LWP 24352)]

Thread 3 (Thread 0xb2685b90 (LWP 24354)):
#0  0xb600d3ba in clock_gettime () from /lib/librt.so.1
#1  0xb7042b76 in ?? () from /usr/lib/qt4/libQtCore.so.4
#2  0x00000001 in ?? ()
#3  0xb26850ac in ?? ()
#4  0x0a271a28 in ?? ()
#5  0xb701c18b in QCoreApplicationPrivate::sendPostedEvents () from /usr/lib/qt4/libQtCore.so.4
#6  0x3a488741 in ?? ()
#7  0xb70c2ff4 in ?? () from /usr/lib/qt4/libQtCore.so.4
#8  0x09fbabc4 in ?? ()
#9  0xb7042d5a in ?? () from /usr/lib/qt4/libQtCore.so.4
#10 0x09fbabc4 in ?? ()
#11 0x09fbabe8 in ?? ()
#12 0x00000000 in ?? ()

Thread 2 (Thread 0xb1e84b90 (LWP 24355)):
#0  0xb600d3ba in clock_gettime () from /lib/librt.so.1
#1  0xb7042b76 in ?? () from /usr/lib/qt4/libQtCore.so.4
#2  0x00000001 in ?? ()
#3  0xb1e8414c in ?? ()
#4  0x09d94230 in ?? ()
#5  0xb6f42e74 in QThreadData::current () from /usr/lib/qt4/libQtCore.so.4
#6  0x00012d4d in ?? ()
#7  0x39ce3bad in ?? ()
#8  0xb70c2ff4 in ?? () from /usr/lib/qt4/libQtCore.so.4
#9  0x09c75814 in ?? ()
#10 0xb7042d5a in ?? () from /usr/lib/qt4/libQtCore.so.4
#11 0x09c75814 in ?? ()
#12 0x09c75838 in ?? ()
#13 0x09c949d8 in ?? ()
#14 0xb7041682 in ?? () from /usr/lib/qt4/libQtCore.so.4
#15 0xb6ec5bfc in __pthread_mutex_unlock_usercnt () from /lib/libpthread.so.0
Backtrace stopped: previous frame inner to this frame (corrupt stack?)

Thread 1 (Thread 0xb5c35700 (LWP 24352)):
[KCrash Handler]
#6  0xb8073424 in __kernel_vsyscall ()
#7  0xb645c660 in raise () from /lib/libc.so.6
#8  0xb645de98 in abort () from /lib/libc.so.6
#9  0xb6f3c44f in qt_message_output () from /usr/lib/qt4/libQtCore.so.4
#10 0xb6f82007 in QString::toLocal8Bit () from /usr/lib/qt4/libQtCore.so.4
#11 0xbf8253b0 in ?? ()
#12 0xb70c2ff4 in ?? () from /usr/lib/qt4/libQtCore.so.4
#13 0xb70c2ff4 in ?? () from /usr/lib/qt4/libQtCore.so.4
#14 0x0a1487b0 in ?? ()
#15 0x00000000 in ?? ()
Comment 7 Dario Andres 2009-10-10 17:25:23 UTC
Mh, with all that packages you should get a better backtrace already. Qt4 debug info seems to be needed (sorry, it is a big one :-\) and may be "kdenetwork" too
Regards
Comment 8 Richard Homonnai 2009-10-10 22:33:40 UTC
FINALLY! I used the upgrade to Qt 4.5.2/ KDE 4.3.2 to rebuild everything with the given flags. And I succeeded :)

So at last, here it is (drkonqi states it should be useful!):

Application: Kopete (kopete), signal: Aborted
[Current thread is 0 (LWP 23838)]

Thread 4 (Thread 0xb2771b90 (LWP 23841)):
#0  0xb7f74424 in __kernel_vsyscall ()
#1  0xb6453f61 in select () from /lib/libc.so.6
#2  0xb6f06b7c in QProcessManager::run (this=0x8ebef28) at io/qprocess_unix.cpp:296
#3  0xb6e4e140 in QThreadPrivate::start (arg=0x8ebef28) at thread/qthread_unix.cpp:188
#4  0xb6dce15f in start_thread () from /lib/libpthread.so.0
#5  0xb645ac0e in clone () from /lib/libc.so.6

Thread 3 (Thread 0xb1caab90 (LWP 23865)):
#0  0xb7f74424 in __kernel_vsyscall ()
#1  0xb6451417 in poll () from /lib/libc.so.6
#2  0xb5ed98d8 in g_poll () from /usr/lib/libglib-2.0.so.0
#3  0x00000001 in ?? ()
#4  0xffffffff in ?? ()
#5  0xb5f62ff4 in ?? () from /usr/lib/libglib-2.0.so.0
#6  0xb5f63398 in ?? () from /usr/lib/libglib-2.0.so.0
#7  0x00000001 in ?? ()
#8  0xb5f62ff4 in ?? () from /usr/lib/libglib-2.0.so.0
#9  0xb5ecceeb in ?? () from /usr/lib/libglib-2.0.so.0
#10 0x09398968 in ?? ()
#11 0x00000001 in ?? ()
#12 0xffffffff in ?? ()
#13 0x09398968 in ?? ()
#14 0x00000001 in ?? ()
#15 0x00000000 in ?? ()

Thread 2 (Thread 0xb14a9b90 (LWP 23866)):
#0  0xb6e4dded in QThreadData::current () at thread/qthread_unix.cpp:106
#1  0xb6f483df in postEventSourcePrepare (s=0x96aa068, timeout=0xb14a91b8) at kernel/qeventdispatcher_glib.cpp:187
#2  0xb5ecc8bc in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#3  0xb5f63398 in ?? () from /usr/lib/libglib-2.0.so.0
#4  0xb5f633c0 in ?? () from /usr/lib/libglib-2.0.so.0
#5  0x00000000 in ?? ()

Thread 1 (Thread 0xb5b90700 (LWP 23838)):
[KCrash Handler]
#6  0xb7f74424 in __kernel_vsyscall ()
#7  0xb63b6660 in raise () from /lib/libc.so.6
#8  0xb63b7e98 in abort () from /lib/libc.so.6
#9  0xb6e47526 in qt_message_output (msgType=QtFatalMsg, 
    buf=0x927b810 "ASSERT: \"mcmi\" in file /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2/kopete/kopete/contactlist/contactlisttreemodel.cpp, line 551") at global/qglobal.cpp:2042
#10 0xb6e475db in qFatal (msg=0xb6f694b8 "ASSERT: \"%s\" in file %s, line %d") at global/qglobal.cpp:2241
#11 0xb6e4768a in qt_assert (assertion=0xb7c232f3 "mcmi", file=0xb7c231e8 "/tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2/kopete/kopete/contactlist/contactlisttreemodel.cpp", line=551)
    at global/qglobal.cpp:1811
#12 0xb7c098f9 in Kopete::UI::ContactListTreeModel::indexListFor (this=0x8f7b4d0, cle=0x935aac8)
    at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2/kopete/kopete/contactlist/contactlisttreemodel.cpp:551
#13 0xb7c09a38 in Kopete::UI::ContactListTreeModel::handleContactDataChange (this=0x8f7b4d0, mc=0x935aac8)
    at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2/kopete/kopete/contactlist/contactlisttreemodel.cpp:576
#14 0xb7c041ad in Kopete::UI::ContactListModel::newMessageEvent (this=0x8f7b4d0, event=0x9336ab8)
    at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2/kopete/kopete/contactlist/contactlistmodel.cpp:356
#15 0xb7c043a6 in Kopete::UI::ContactListModel::qt_metacall (this=0x8f7b4d0, _c=QMetaObject::InvokeMetaMethod, _id=11, _a=0xbfd70e2c)
    at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2_build/kopete/kopete/contactlist/contactlistmodel.moc:103
#16 0xb7c07acd in Kopete::UI::ContactListTreeModel::qt_metacall (this=0x8f7b4d0, _c=QMetaObject::InvokeMetaMethod, _id=31, _a=0xbfd70e2c)
    at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2_build/kopete/kopete/contactlist/contactlisttreemodel.moc:77
#17 0xb6f34069 in QMetaObject::activate (sender=0x8f95268, from_signal_index=<value optimized out>, to_signal_index=12, argv=0x0) at kernel/qobject.cpp:3101
#18 0xb6f345c5 in QMetaObject::activate (sender=0x8f95268, m=0xb7d4598c, local_signal_index=8, argv=0xbfd70e2c) at kernel/qobject.cpp:3178
#19 0xb7ccf79e in Kopete::ChatSessionManager::newEvent (this=0x8f95268, _t1=0x9336ab8) at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2_build/kopete/libkopete/kopetechatsessionmanager.moc:166
#20 0xb7ccf7c9 in Kopete::ChatSessionManager::postNewEvent (this=0x8f95268, e=0x9336ab8) at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2/kopete/libkopete/kopetechatsessionmanager.cpp:184
#21 0xb7c94ae2 in KopeteViewManager::messageAppended (this=0x8fb2870, msg=@0xbfd71258, manager=0x96a2800)
    at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2/kopete/libkopete/private/kopeteviewmanager.cpp:400
#22 0xb7c95433 in KopeteViewManager::qt_metacall (this=0x8fb2870, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0xbfd71118)
    at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2_build/kopete/libkopete/kopeteviewmanager.moc:85
#23 0xb6f34069 in QMetaObject::activate (sender=0x8f95268, from_signal_index=<value optimized out>, to_signal_index=11, argv=0x0) at kernel/qobject.cpp:3101
#24 0xb6f345c5 in QMetaObject::activate (sender=0x8f95268, m=0xb7d4598c, local_signal_index=7, argv=0xbfd71118) at kernel/qobject.cpp:3178
#25 0xb7ccf81a in Kopete::ChatSessionManager::display (this=0x8f95268, _t1=@0xbfd71258, _t2=0x96a2800)
    at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2_build/kopete/libkopete/kopetechatsessionmanager.moc:159
#26 0xb7ccfad3 in Kopete::ChatSessionManager::qt_metacall (this=0x8f95268, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0xbfd71228)
    at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2_build/kopete/libkopete/kopetechatsessionmanager.moc:95
#27 0xb6f34069 in QMetaObject::activate (sender=0x96a2800, from_signal_index=<value optimized out>, to_signal_index=6, argv=0x0) at kernel/qobject.cpp:3101
#28 0xb6f34391 in QMetaObject::activate (sender=0x96a2800, m=0xb7d45844, from_local_signal_index=1, to_local_signal_index=2, argv=0xbfd71228) at kernel/qobject.cpp:3198
#29 0xb7ccc5d8 in Kopete::ChatSession::messageAppended (this=0x96a2800, _t1=@0xbfd71258, _t2=0x96a2800)
    at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2_build/kopete/libkopete/kopetechatsession.moc:237
#30 0xb7ccf528 in Kopete::TemporaryKMMCallbackAppendMessageHandler::handleMessage (this=0x96e4b60, event=0x96d62e0)
    at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2/kopete/libkopete/kopetechatsession.cpp:220
#31 0xb7cebace in Kopete::MessageHandler::handleMessageInternal (this=0x96e4b60, event=0x96d62e0) at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2/kopete/libkopete/kopetemessagehandler.cpp:60
#32 0xb7cebb37 in Kopete::MessageHandler::messageAccepted (this=0x9910ee8, event=0x96d62e0) at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2/kopete/libkopete/kopetemessagehandler.cpp:71
#33 0xb7cebbd3 in Kopete::MessageHandler::handleMessage (this=0x9910ee8, event=0x96d62e0) at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2/kopete/libkopete/kopetemessagehandler.cpp:65
#34 0xb2c5a6c8 in HistoryMessageLogger::handleMessage (this=0x9910ee8, event=0x96d62e0) at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2/kopete/plugins/history/historyplugin.cpp:105
#35 0xb7cebace in Kopete::MessageHandler::handleMessageInternal (this=0x9910ee8, event=0x96d62e0) at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2/kopete/libkopete/kopetemessagehandler.cpp:60
#36 0xb7cebb37 in Kopete::MessageHandler::messageAccepted (this=0x98d14f8, event=0x96d62e0) at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2/kopete/libkopete/kopetemessagehandler.cpp:71
#37 0xb7cebbd3 in Kopete::MessageHandler::handleMessage (this=0x98d14f8, event=0x96d62e0) at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2/kopete/libkopete/kopetemessagehandler.cpp:65
#38 0xb2c43ccc in OtrMessageHandler::handleMessage (this=0x98d14f8, event=0x96d62e0) at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2/kopete/plugins/otr/otrplugin.cpp:257
#39 0xb7cebace in Kopete::MessageHandler::handleMessageInternal (this=0x98d14f8, event=0x96d62e0) at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2/kopete/libkopete/kopetemessagehandler.cpp:60
#40 0xb7cebb37 in Kopete::MessageHandler::messageAccepted (this=0x9462470, event=0x96d62e0) at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2/kopete/libkopete/kopetemessagehandler.cpp:71
#41 0xb7cebbd3 in Kopete::MessageHandler::handleMessage (this=0x9462470, event=0x96d62e0) at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2/kopete/libkopete/kopetemessagehandler.cpp:65
#42 0xb2cd8e7d in PrivacyMessageHandler::handleMessage (this=0x9462470, e=0x96d62e0) at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2/kopete/plugins/privacy/privacymessagehandler.cpp:80
#43 0xb7cebace in Kopete::MessageHandler::handleMessageInternal (this=0x9462470, event=0x96d62e0) at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2/kopete/libkopete/kopetemessagehandler.cpp:60
#44 0xb7cea136 in Kopete::ProcessMessageTask::start (this=0x913a0b8) at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2/kopete/libkopete/kopetemessagehandlerchain.cpp:166
#45 0xb7cea0fd in Kopete::ProcessMessageTask::qt_metacall (this=0x913a0b8, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbfd71618)
    at /tmp/portage/kde-base/kopete-4.3.2/work/kopete-4.3.2_build/kopete/libkopete/kopetemessagehandlerchain.moc:112
#46 0xb6f34069 in QMetaObject::activate (sender=0x9710860, from_signal_index=<value optimized out>, to_signal_index=4, argv=0x0) at kernel/qobject.cpp:3101
#47 0xb6f345c5 in QMetaObject::activate (sender=0x9710860, m=0xb6fc8924, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3178
#48 0xb6f3a6c8 in QSingleShotTimer::timeout (this=0x9710860) at .moc/release-shared/qtimer.moc:76
#49 0xb6f3a7c1 in QSingleShotTimer::timerEvent (this=0x9710860) at kernel/qtimer.cpp:298
#50 0xb6f31302 in QObject::event (this=0x9710860, e=0xbfd71a9c) at kernel/qobject.cpp:1066
#51 0xb6707b7b in QApplicationPrivate::notify_helper (this=0x8eb9928, receiver=0x9710860, e=0xbfd71a9c) at kernel/qapplication.cpp:4056
#52 0xb670f4b6 in QApplication::notify (this=0xbfd71d18, receiver=0x9710860, e=0xbfd71a9c) at kernel/qapplication.cpp:3603
#53 0xb7404ccc in KApplication::notify (this=0xbfd71d18, receiver=0x9710860, event=0xbfd71a9c) at /tmp/portage/kde-base/kdelibs-4.3.2-r1/work/kdelibs-4.3.2/kdeui/kernel/kapplication.cpp:302
#54 0xb6f22e3d in QCoreApplication::notifyInternal (this=0xbfd71d18, receiver=0x9710860, event=0xbfd71a9c) at kernel/qcoreapplication.cpp:606
#55 0xb6f4b36e in QTimerInfoList::activateTimers (this=0x8ebbab4) at kernel/qcoreapplication.h:213
#56 0xb6f480ed in timerSourceDispatch (source=0x8ebba80) at kernel/qeventdispatcher_glib.cpp:165
#57 0xb5ec9d57 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
Comment 9 Matt Rogers 2009-10-10 22:42:46 UTC
nice backtrace. Thanks!
Comment 10 Dario Andres 2009-10-10 23:38:38 UTC
Reopening.
Comment 11 Dario Andres 2009-10-12 18:32:30 UTC
*** Bug 202976 has been marked as a duplicate of this bug. ***
Comment 12 Dario Andres 2009-10-12 18:34:10 UTC
Bug 210275 got more information about the situation:
"
What happens:
1) Kopete is just sitting around, really idling (no open conversations)
2) A message comes in, Knotify "dings" (firing an incoming message event)
3) Kopete crashes.

This seems to repeat itself, maybe some unhandled message exception?
"
Comment 13 Dario Andres 2009-10-12 18:34:20 UTC
*** Bug 210275 has been marked as a duplicate of this bug. ***
Comment 14 Richard Homonnai 2009-10-12 20:10:24 UTC
Little notice for #210275:

The problematic transport (Yahoo over Jabber) is turned off because of this bug.
So this error seems to be triggered even then, although not that often.

Should I record the XMPP-conversation before the crash? Would that be of any help?
Comment 15 Roman Jarosz 2009-10-29 21:23:58 UTC
SVN commit 1042448 by rjarosz:

Ignore index lookup for account internal myself contact because it isn't in contact list.
In rare cases we may get message event for it and we don't want to assert.

BUG: 209248



 M  +2 -1      contactlistplainmodel.cpp  
 M  +3 -2      contactlisttreemodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1042448
Comment 16 Richard Homonnai 2009-10-30 00:32:08 UTC
THANKS a lot! This fixes it, no more crashes.

Also already reported to Gentoo:
http://bugs.gentoo.org/show_bug.cgi?id=291081
Comment 17 Roman Jarosz 2009-10-30 01:07:55 UTC
Richard could you tell me what kind of message this was?
Comment 18 Richard Homonnai 2009-10-30 01:11:24 UTC
Sure, now I know it. It was my Yahoo transport sending out the following:

"Login Failed to Yahoo! service. The Yahoo! Service returned a bad password error Please use the registration function to check your password is correct."

Which is sent out by my transport, which doesn't have a contact on the list (at least I can't see any). I have now successfully updated the transport, but I can still revert, if XMPP logs are needed.

Also, this crash occured to me on some other messages like disconnects signaled by my ICQ transport (using ejabberd with py*-t)
Comment 19 Richard Homonnai 2009-10-30 01:13:15 UTC
Addition: It happened on those "single messages" (the ones where you can/have to click a button to advance to the next one, and not the chat type)
Comment 20 Roman Jarosz 2009-10-30 01:15:36 UTC
SVN commit 1042519 by rjarosz:

Backport commit 1042448

Ignore index lookup for account internal myself contact because it isn't in contact list.
In rare cases we may get message event for it and we don't want to assert.

CCBUG: 209248



 M  +2 -1      contactlistplainmodel.cpp  
 M  +3 -2      contactlisttreemodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1042519
Comment 21 Roman Jarosz 2009-10-30 01:22:36 UTC
No need to revert, I was just curious and yes you won't have contact for this messages in contact list.