Ignore index lookup for account internal myself contact because it isn't in contact list. In rare cases we may get message event for it and we don't want to assert.

BUG: 209248


svn path=/trunk/KDE/kdenetwork/kopete/; revision=1042448